test/statements/foreach/varIntent.good
varIntent.chpl:1: error: var intents can not be used in foreach loops
