test/statements/foreach/varIntent.chpl
foreach i in 0..0 with (var x = 0) { }
